--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -7,8 +7,8 @@
  * To change this template use File | Settings | File Templates.
  */
 //require "inc/google-api-connect.php";
-require($this->basepath("inc/settings.php"));
-require($this->basepath("inc/contactscript.php"));
+require $this->basepath("public/inc/settings.php");
+require $this->basepath("public/inc/contactscript.php");
 ?>
 
 <!DOCTYPE html>
